# Optimus

./: Authors.txt  CMakeLists.txt  CMakeLists_with_verdandi.txt  OptimusConfig.cmake.in  ReadMe.md
data/: cube0.vtk  (+15 more)
trunk/Optimus/: CMakeLists.txt  Optimus-dependencies.prf
trunk/Optimus/matlab/MatlabFEM/confs/: cylinder1028Conf.m  cylinder1028def1Conf.m  cylinder1063Conf.m  cylinder152Conf.m  cylinder152def1Conf.m  cylinder22931Conf.m  cylinder2880Conf.m  cylinder7054Conf.m  cylinder7054def1Conf.m  liver1777Conf.m  tetra1Conf.m  tetra2Conf.m  tetra2def1Conf.m  tetraChConf.m  visualConf.m
trunk/Optimus/matlab/MatlabFEM/input_mesh/cylinder1028/: X0_nodes.mat  cylinder.geo  cylinder1028.msh  displaced1.bc  displaced1_337.bc  elems.mat  faces.mat  fixed21.bc  fixed42.bc  nodes.mat
trunk/Optimus/matlab/MatlabFEM/input_mesh/cylinder152/: X0_nodes.mat  cylinder.geo  elems.mat  nodes.mat
trunk/Optimus/matlab/MatlabFEM/input_mesh/cylinder152_1G/: cylinder152.msh  cylinder152CORR.msh  faces.mat  nodes.mat  nodes_def1.mat
trunk/Optimus/matlab/MatlabFEM/input_mesh/cylinder22931/: X0_nodes.mat  cylinder.geo  cylinder22931.msh  displaced1.bc  elems.mat  faces.mat  nodes.mat
trunk/Optimus/matlab/MatlabFEM/input_mesh/cylinder7054/: X0_nodes.mat  cylinder.geo  cylinder7054.mesh  cylinder7054.msh  cylinder7054.vtk  cylinder7054Corr.vtk  displaced1.bc  displaced2.bc  elems.mat  faces.mat  nodes.mat  nodes_def1
trunk/Optimus/matlab/MatlabFEM/input_mesh/liver1777/: displaced1_13.bc  elems.mat  faces.mat  fixed_nodes11.mat  nodes.mat
trunk/Optimus/matlab/MatlabFEM/input_mesh/tetra1Ch/: X0_nodes.mat  faces.mat
trunk/Optimus/matlab/MatlabFEM/input_mesh/tetra1v2/: fixed_nodes3.mat  nodes.mat
trunk/Optimus/matlab/MatlabFEM/input_mesh/tetra1v3/: faces.mat  nodes.mat
trunk/Optimus/matlab/MatlabFEM/scripts/: applyBC.m  assemble_FKA_total.m  assemble_FKA_updated.m  assemble_FK_total.m  assemble_FK_updated.m  assemble_aA_total.m  assemble_aA_updated.m  nonlinearProblem_IncNR.m  saveAsText.m  saveChoralInput.m  setupProblem.m  testOperations.m  vis_rest_path_struct.m  visualizeDeformation.m  visualizeLoading.m
trunk/Optimus/scenes/: BubblePacking.scn
trunk/Optimus/src/: BubblePackingForceField.h  BubblePackingForceField.inl  OptimParams.cpp  OptimParams.h  OptimParams.inl  PointProjection.cpp  PointProjection.h  PointProjection.inl  SimulationPlanningController.h  TestingParams.h  ekfilter_impl.inl  initOptimusPlugin.cpp
trunk/Optimus/verdandiSofa/: SimulatedStateObservationSource.h  SimulatedStateObservationSource.inl  SofaModelWrapper.cpp  SofaModelWrapper.h  SofaModelWrapper.inl  SofaModelWrapperParallel.h  SofaModelWrapperParallel.inl  VerdandiActiveStateMonitor.cpp  VerdandiActiveStateMonitor.h  VerdandiActiveStateMonitor.inl  VerdandiAnimationLoop.cpp  VerdandiAnimationLoop.h  VerdandiClasses.cpp  VerdandiClasses.h  VerdandiObservationParams.cpp  VerdandiObservationParams.h  VerdandiROUKFParams.cpp  VerdandiUpdateStateEvent.h
trunk/Optimus/verdandiSofa/Doc/: EulerImplicitSofa.tex  VerdandiSofaIntegration.tex
trunk/Optimus/verdandiSofa/modifVerdandi/: ReducedOrderUnscentedKalmanFilter.cxx
trunk/Optimus/verdandiSofa/python_scenes/test_Parallel/: AddAuxScenes.py  CreateParallelizableScene.py  CreateScene.py  CreateSceneAE.py  CylinderModulusForward.scn  Test_python.py  Test_python.scn  Test_python.sh
trunk/Optimus/verdandiSofa/scenes/: CylinderAdaptiveBeam.scn  CylinderGravity.scn  CylinderGravity2.scn  CylinderGravity3.scn  CylinderGravityROUKF.scn  CylinderGravitySimple.scn  CylinderModulusForward.scn  CylinderModulusForward_Cyl10.scn  CylinderModulusROUKF.scn  CylinderModulusROUKF_Cyl10.scn  CylinderModulusROUKF_Cyl3.scn  CylinderModulusROUKF_Cyl3AE.scn  CylinderPlaneGravity.scn  CylinderSprings1.scn  CylinderSpringsForward1.scn  CylinderSpringsROUKF1.scn  CylinderSpringsROUKF1Complex.scn  CylinderSpringsROUKF1ComplexDyn.scn  ReadMonitor.scn  analyzeROUKF.m  analyzeROUKF2.m  compareKalman.m  cylinder2.geo  cylinder3.geo
trunk/Optimus/verdandiSofa/scenes/configuration/: confBeam15.lua  confCyl2_1673.lua  confCyl2_363.lua  confCyl3_770.lua  confCylinder2.lua  confCylinder3.lua
trunk/Optimus/verdandiSofa/scenes/daHeteroCylinderConstant/: p1_estim.out  p1_var.out  p2_var.out  p3_estim.out  p4_estim.out  p4_var.out  p5_var.out  p6_var.out
trunk/Optimus/verdandiSofa/scenes/data/: cylinder1673.mesh  cylinder1673.vtk  cylinder3_2150.mesh  cylinder6_5368.mesh
trunk/Optimus/verdandiSofa/scenes/estimationBC/: estimPosition1_Forward.scn  estimPosition1_ROUKF.scn
trunk/Optimus/verdandiSofa/scenes/nazimDA02/: ARDA1.scn  ARReadStatePPP.scn  initC.txt  initC3.txt  initM.txt  initP.txt  mappedC.txt  mappedC3.txt  mappedF.txt  movingC.txt  movingF.txt
trunk/Optimus/verdandiSofa/scenes/visualisation/: analyzeROUKF.m
trunk/Optimus/verdandiSofa/verdandi-1.5/: .gitignore  history  version
trunk/Optimus/verdandiSofa/verdandi-1.5/method/: BLUE.cxx  BLUE.hxx  EnsembleKalmanFilter.cxx  ExtendedKalmanFilter.cxx  ForwardDriver.cxx  FourDimensionalVariational.cxx  HamiltonJacobiBellman.hxx  MonteCarlo.hxx  ReducedOrderExtendedKalmanFilter.cxx  ReducedOrderExtendedKalmanFilter.hxx  ReducedOrderUnscentedKalmanFilter.cxx  ReducedOrderUnscentedKalmanFilter.hxx  TrajectoryManager.cxx  UnscentedKalmanFilter.cxx  UnscentedKalmanFilter.hxx
trunk/Optimus/verdandiSofa/verdandi-1.5/model/: CheckingModel.cxx  ClampedBar.cxx  ModelTemplate.hxx  PetscClampedBar.cxx  PythonModel.hxx  QuadraticModel.cxx  ShallowWater.hxx
trunk/Optimus/verdandiSofa/verdandi-1.5/observation_manager/: GridToNetworkObservationManager.cxx  GridToNetworkObservationManager.hxx  LinearObservationManager.cxx  LinearObservationManager.hxx  ObservationManagerTemplate.cxx  PetscLinearObservationManager.hxx  PythonObservationManager.cxx  PythonObservationManager.hxx
trunk/Optimus/verdandiSofa/verdandi-1.5/python/: verdandi.def  verdandi.i
trunk/Optimus/verdandiSofa/verdandi-1.5/share/: Error.cxx  Error.hxx  Logger.cxx  OutputSaver.cxx  SConstruct  UsefulFunction.cxx  UsefulFunction.hxx  VerdandiBase.cxx  VerdandiOps.cxx
(+1812 files in other folders)
